test/e2e/fixtures/header-routing/queries.json
[
  {
    "url": "/header-routing/",
    "method": "GET"
  },
  {
    "url": "/header-routing/",
    "method": "GET",
    "headers": {
      "X-Route": "target2"
    }
  }
]
